feat: index.html(section "about me") + styles

--- a/index.html
+++ b/index.html
@@ -34,5 +34,37 @@
         </div>
         <button class="btn-scroll"><img src="images/scroll.png" alt="Scroll"></button>
     </section>
+    <section class="section-about-me">
+        <div class="wrapper">
+            <div class="box-about">
+                <div class="box-about-item">
+                    <img class="box-about__back" src="images/laptop.png" alt="Workplace">
+                    <p class="box-about__vertical">Work Place</p>
+                    <img class="box-about__front" src="images/photo.jpg" alt="Photo">
+                </div>
+                <div class="box-about-item">
+                    <h2 class="title-h2">About Me</h2>
+                    <p class="box-about__text">The quick, brown fox jumps over a lazy dog. djs flock by when mtv ax quiz prog. Junk MTV quiz graced by fox whelps. Bawds jog, flick quartz, vex nymphs. Waltz, bad nymph, for quick jigs vex!</p>
+                <div class="progress-bar">
+                    <div class="progress-bar-line progress-bar__photoshop"></div>
+                    <div class="progress-bar-text">
+                        <p >Adobe Photoshop</p>
+                        <p>100%</p>
+                    </div>
+                    <div class="progress-bar-line progress-bar__indesign"></div>
+                    <div class="progress-bar-text">
+                        <p>Adobe Indesign</p>
+                        <p>65%</p>
+                    </div>
+                    <div class="progress-bar-line progress-bar__xd"></div>
+                    <div class="progress-bar-text">
+                        <p>Adobe XD</p>
+                        <p>80%</p>
+                    </div>
+                </div>
+                </div>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
