--- a/index.html
+++ b/index.html
@@ -122,5 +122,44 @@
             </div>
         </div>
     </section>
+    <section class="section-portfolio">
+        <div class="wrapper">
+            <h2 class="title-h2 text-center">My Portfolio</h2>
+            <p class="after-title text-center">Here is all my work that i maked for some great people</p>
+
+            <div class="portfolio">
+                <div class="portfolio-item portfolio-1">
+                    <div class="portfolio-thumb">
+                        <img src="images/portfolio/photo1.jpg" alt="Photo 1">
+                    </div>
+                </div>
+                <div class="portfolio-item portfolio-2">
+                    <div class="portfolio-thumb">
+                        <img src="images/portfolio/photo2.jpg" alt="Photo 2">
+                    </div>
+                </div>
+                <div class="portfolio-item portfolio-3">
+                    <div class="portfolio-thumb">
+                        <img src="images/portfolio/photo3.jpg" alt="Photo 3">
+                    </div>
+                </div>
+                <div class="portfolio-item portfolio-4">
+                    <div class="portfolio-thumb">
+                        <img src="images/portfolio/photo4.jpg" alt="Photo 4">
+                    </div>
+                </div>
+                <div class="portfolio-item portfolio-5">
+                    <div class="portfolio-thumb">
+                        <img src="images/portfolio/photo5.jpg" alt="Photo 5">
+                    </div>
+                </div>
+                <div class="portfolio-item portfolio-6">
+                    <div class="portfolio-thumb">
+                        <img src="images/portfolio/photo6.jpg" alt="Photo 6">
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
