feat: index.html(section "banner") + styles

--- a/index.html
+++ b/index.html
@@ -128,37 +128,44 @@
             <p class="after-title text-center">Here is all my work that i maked for some great people</p>
 
             <div class="portfolio">
-                <div class="portfolio-item portfolio-1">
+                <div class="portfolio-item portfolio-photo1">
                     <div class="portfolio-thumb">
                         <img src="images/portfolio/photo1.jpg" alt="Photo 1">
                     </div>
                 </div>
-                <div class="portfolio-item portfolio-2">
+                <div class="portfolio-item portfolio-photo2">
                     <div class="portfolio-thumb">
                         <img src="images/portfolio/photo2.jpg" alt="Photo 2">
                     </div>
                 </div>
-                <div class="portfolio-item portfolio-3">
+                <div class="portfolio-item portfolio-photo3">
                     <div class="portfolio-thumb">
                         <img src="images/portfolio/photo3.jpg" alt="Photo 3">
                     </div>
                 </div>
-                <div class="portfolio-item portfolio-4">
+                <div class="portfolio-item portfolio-photo4">
                     <div class="portfolio-thumb">
                         <img src="images/portfolio/photo4.jpg" alt="Photo 4">
                     </div>
                 </div>
-                <div class="portfolio-item portfolio-5">
+                <div class="portfolio-item portfolio-photo5">
                     <div class="portfolio-thumb">
                         <img src="images/portfolio/photo5.jpg" alt="Photo 5">
                     </div>
                 </div>
-                <div class="portfolio-item portfolio-6">
+                <div class="portfolio-item portfolio-photo6">
                     <div class="portfolio-thumb">
                         <img src="images/portfolio/photo6.jpg" alt="Photo 6">
                     </div>
                 </div>
             </div>
+        </div>
+    </section>
+    <section class="section-banner">
+        <div class="wrapper">
+            <p class="before-title text-center">Do you love my work?
+            <h2 class="title-h2 text-center">Available For Freelance Work!</h2>
+            <a href="#" class="btn">Hire Me</a>
         </div>
     </section>
 </body>
