--- a/index.html
+++ b/index.html
@@ -163,9 +163,45 @@
     </section>
     <section class="section-banner">
         <div class="wrapper">
-            <p class="before-title text-center">Do you love my work?
+            <p class="before-title text-center">Do you love my work?</p>
             <h2 class="title-h2 text-center">Available For Freelance Work!</h2>
             <a href="#" class="btn">Hire Me</a>
+        </div>
+    </section>
+    <section class="section-feedback">
+        <div class="wrapper">
+            <h2 class="title-h2 text-center">Testimonials</h2>
+            <p class="after-title text-center">Lets check what people say about me and my work</p>
+            <div class="feedback">
+                <div class="feedback-item">
+                    <div class="feedback-top">
+                        <div class="feedback-thumb">
+                            <img src="images/feedback1.png" alt="Jonathon">
+                        </div>
+                        <div class="feedback-name">
+                            <p class="feedback-name__title">Jonathon Lee</p>
+                            <p class="feedback-name__job">UI/UX Designer</p>
+                        </div>
+                    </div>
+                    <div class="feedback-body">
+                        <p>Finding the right partner to help make this goal a reality was key. The smart and creative team at Blue Fountain Media has helped anthony.com establish itself as a successful online business and become synonymous with an enjoyable solutions.</p>
+                    </div>
+                </div>
+                <div class="feedback-item">
+                    <div class="feedback-top">
+                        <div class="feedback-thumb">
+                            <img src="images/feedback2.png" alt="Emalia">
+                        </div>
+                        <div class="feedback-name">
+                            <p class="feedback-name__title">Emalia Clark</p>
+                            <p class="feedback-name__job">Frontend Dev</p>
+                        </div>
+                    </div>
+                    <div class="feedback-body">
+                        <p>Blue Fountain Media came up with the design on their first try, delivered the complete package on a reasonable budget, and continued to fine-tune it. That wasn't enough -- they also created a plan to market the website and increase traffic.</p>
+                    </div>
+                </div>
+            </div>
         </div>
     </section>
 </body>
