feat: index.html(section "advantages") + styles

--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
                 <div class="feedback-item">
                     <div class="feedback-top">
                         <div class="feedback-thumb">
-                            <img src="images/feedback1.png" alt="Jonathon">
+                            <img src="images/feedback/feedback1.png" alt="Jonathon">
                         </div>
                         <div class="feedback-name">
                             <p class="feedback-name__title">Jonathon Lee</p>
@@ -190,7 +190,7 @@
                 <div class="feedback-item">
                     <div class="feedback-top">
                         <div class="feedback-thumb">
-                            <img src="images/feedback2.png" alt="Emalia">
+                            <img src="images/feedback/feedback2.png" alt="Emalia">
                         </div>
                         <div class="feedback-name">
                             <p class="feedback-name__title">Emalia Clark</p>
@@ -200,6 +200,40 @@
                     <div class="feedback-body">
                         <p>Blue Fountain Media came up with the design on their first try, delivered the complete package on a reasonable budget, and continued to fine-tune it. That wasn't enough -- they also created a plan to market the website and increase traffic.</p>
                     </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="section-advantages">
+        <div class="wrapper">
+            <div class="advantages">
+                <div class="advantages-item">
+                    <div class="advantages__icon advantages__icon-1"></div>
+                    <p class="advantages__title">
+                        <span>1325</span>
+                        Happy Customers
+                    </p>
+                </div>
+                <div class="advantages-item">
+                    <div class="advantages__icon advantages__icon-2"></div>
+                    <p class="advantages__title">
+                        <span>1214</span>
+                        Completed Project
+                    </p>
+                </div>
+                <div class="advantages-item">
+                    <div class="advantages__icon advantages__icon-3"></div>
+                    <p class="advantages__title">
+                        <span>10</span>
+                        Years Experience
+                    </p>
+                </div>
+                <div class="advantages-item">
+                    <div class="advantages__icon advantages__icon-4"></div>
+                    <p class="advantages__title">
+                        <span>375</span>
+                        Wins Awards
+                    </p>
                 </div>
             </div>
         </div>
