feat: index.html(footer) + styles

--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>Photographer portfolio</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/material-design-iconic-font/2.2.0/css/material-design-iconic-font.min.css">
     <link rel="stylesheet" href="styles/normalize.css">
     <link rel="stylesheet" href="styles/style.css">
 </head>
@@ -250,5 +251,22 @@
             </form>
         </div>
     </section>
+    <footer>
+        <div class="wrapper">
+            <div class="footer">
+                <span>&copy; Copyright 2020 iGlyphic. All rights reserved</span>
+                <ul class="social-network">
+                    <li class="social-network-item"><a class="social-network__link" href="#" target="_blank"><i class="zmdi zmdi-facebook"></i></a></li>
+                    <li class="social-network-item"><a class="social-network__link" href="#" target="_blank"><i class="zmdi zmdi-twitter"></i></a></li>
+                    <li class="social-network-item"><a class="social-network__link" href="#" target="_blank"><i class="zmdi zmdi-instagram"></i></a></li>
+                    <li class="social-network-item"><a class="social-network__link" href="#" target="_blank"><i class="zmdi zmdi-youtube-play"></i></a></li>
+                    <li class="social-network-item"><a class="social-network__link" href="#" target="_blank"><i class="zmdi zmdi-github"></i></a></li>
+                    <li class="social-network-item"><a class="social-network__link" href="#" target="_blank"><i class="zmdi zmdi-dribbble"></i></a></li>
+                    <li class="social-network-item"><a class="social-network__link" href="#" target="_blank"><i class="zmdi zmdi-google"></i></a></li>
+                    <li class="social-network-item"><a class="social-network__link" href="#" target="_blank"><i class="zmdi zmdi-tumblr"></i></a></li>
+                </ul>
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
