--- a/index.html
+++ b/index.html
@@ -31,7 +31,13 @@
             </div>
         </header>
         <div class="wrapper">
-            <h1 class="title-h1">I Am <span>Photographer</span></h1>
+            <div class="main-title">
+                <h1 class="title-h1">I Am <span>Photographer</span></h1>
+                <div class="lines lines-1"></div>
+                <div class="lines lines-2"></div>
+                <div class="lines lines-3"></div>
+                <div class="lines lines-4"></div>
+            </div>
         </div>
         <button class="btn-scroll"><img src="images/scroll.png" alt="Scroll"></button>
     </section>
