feat: hover effects for images

--- a/index.html
+++ b/index.html
@@ -139,31 +139,37 @@
                     <div class="portfolio-thumb">
                         <img src="images/portfolio/photo1.jpg" alt="Photo 1">
                     </div>
+                    <p class="portfolio-item__back">Ayutthaya City<span>Photo</span></p>
                 </div>
                 <div class="portfolio-item portfolio-photo2">
                     <div class="portfolio-thumb">
                         <img src="images/portfolio/photo2.jpg" alt="Photo 2">
                     </div>
+                    <p class="portfolio-item__back">Island in the ocean<span>Photo</span></p>
                 </div>
                 <div class="portfolio-item portfolio-photo3">
                     <div class="portfolio-thumb">
                         <img src="images/portfolio/photo3.jpg" alt="Photo 3">
                     </div>
+                    <p class="portfolio-item__back">Modern Architecture<span>Photo</span></p>
                 </div>
                 <div class="portfolio-item portfolio-photo4">
                     <div class="portfolio-thumb">
                         <img src="images/portfolio/photo4.jpg" alt="Photo 4">
                     </div>
+                    <p class="portfolio-item__back">Historical Centers<span>Photo</span></p>
                 </div>
                 <div class="portfolio-item portfolio-photo5">
                     <div class="portfolio-thumb">
                         <img src="images/portfolio/photo5.jpg" alt="Photo 5">
                     </div>
+                    <p class="portfolio-item__back">Summersville Lake<span>Photo</span></p>
                 </div>
                 <div class="portfolio-item portfolio-photo6">
                     <div class="portfolio-thumb">
                         <img src="images/portfolio/photo6.jpg" alt="Photo 6">
                     </div>
+                    <p class="portfolio-item__back">Zen<span>Photo</span></p>
                 </div>
             </div>
         </div>
