--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                     <div class="service__text">
                         When your customers can buy what you sell from others, that’s called competition. That also makes it a for commodity.
                     </div>
-                    <a class="service__link" href="#"><span class="service__link-text">Read More</span><span class="service__link-line"></span></a>
+                    <div class="service__link"><a href="#" title="Read More">Read More</a></div>
                 </div>
                 <div class="service-item">
                     <div class="service__icon service__photo"></div>
@@ -92,7 +92,7 @@
                     <div class="service__text">
                         Your customers can buy what you sell from the others, that’s called competition. That also makes it a Line Miliye dilam commodity.
                     </div>
-                    <a class="service__link" href="#"><span class="service__link-text">Read More</span><span class="service__link-line"></span></a>
+                    <div class="service__link"><a href="#">Read More</a></div>
                 </div>
                 <div class="service-item">
                     <div class="service__icon service__web"></div>
@@ -100,7 +100,7 @@
                     <div class="service__text">
                         Customers can buy what you sell from others, that’s called competition. That also makes it a commodity That make you sence
                     </div>
-                    <a class="service__link" href="#"><span class="service__link-text">Read More</span><span class="service__link-line"></span></a>
+                    <div class="service__link"><a href="#">Read More</a></div>
                 </div>
                 <div class="service-item">
                     <div class="service__icon service__media"></div>
@@ -108,7 +108,7 @@
                     <div class="service__text">
                         When your customers can buy what you sell from others, that’s called competition. That also makes it a commodity.
                     </div>
-                    <a class="service__link" href="#"><span class="service__link-text">Read More</span><span class="service__link-line"></span></a>
+                    <div class="service__link"><a href="#">Read More</a></div>
                 </div>
                 <div class="service-item">
                     <div class="service__icon service__marketing"></div>
@@ -116,7 +116,7 @@
                     <div class="service__text">
                         When your customers can buy what you sell from others, that’s called competition. That also makes it a commodity.
                     </div>
-                    <a class="service__link" href="#"><span class="service__link-text">Read More</span><span class="service__link-line"></span></a>
+                    <div class="service__link"><a href="#">Read More</a></div>
                 </div>
                 <div class="service-item">
                     <div class="service__icon service__app"></div>
@@ -124,7 +124,7 @@
                     <div class="service__text">
                         When your customers can buy what you sell from others, that’s called competition. That also makes it a commodity.
                     </div>
-                    <a class="service__link" href="#"><span class="service__link-text">Read More</span><span class="service__link-line"></span></a>
+                    <div class="service__link"><a href="#">Read More</a></div>
                 </div>
             </div>
         </div>
