--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                     <div class="service__icon service__design"></div>
                     <h3 class="title-h3">Graphic Design</h3>
                     <div class="service__text">
-                        When your customers can buy what you sell from others, that’s called competition. That also makes it a for commodity.
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam aliquet interdum dolor. Etiam ornare nisi enim, molestie sodales elit porta non. Morbi et.
                     </div>
                     <div class="service__link"><a href="#" title="Read More">Read More</a></div>
                 </div>
@@ -90,7 +90,7 @@
                     <div class="service__icon service__photo"></div>
                     <h3 class="title-h3">Photography</h3>
                     <div class="service__text">
-                        Your customers can buy what you sell from the others, that’s called competition. That also makes it a Line Miliye dilam commodity.
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam aliquet interdum dolor. Etiam ornare nisi enim, molestie sodales elit porta non. Morbi et.
                     </div>
                     <div class="service__link"><a href="#">Read More</a></div>
                 </div>
@@ -98,7 +98,7 @@
                     <div class="service__icon service__web"></div>
                     <h3 class="title-h3">Web Design</h3>
                     <div class="service__text">
-                        Customers can buy what you sell from others, that’s called competition. That also makes it a commodity That make you sence
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam aliquet interdum dolor. Etiam ornare nisi enim, molestie sodales elit porta non. Morbi et.
                     </div>
                     <div class="service__link"><a href="#">Read More</a></div>
                 </div>
@@ -106,7 +106,7 @@
                     <div class="service__icon service__media"></div>
                     <h3 class="title-h3">Social Media</h3>
                     <div class="service__text">
-                        When your customers can buy what you sell from others, that’s called competition. That also makes it a commodity.
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam aliquet interdum dolor. Etiam ornare nisi enim, molestie sodales elit porta non. Morbi et.
                     </div>
                     <div class="service__link"><a href="#">Read More</a></div>
                 </div>
@@ -114,7 +114,7 @@
                     <div class="service__icon service__marketing"></div>
                     <h3 class="title-h3">Marketing</h3>
                     <div class="service__text">
-                        When your customers can buy what you sell from others, that’s called competition. That also makes it a commodity.
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam aliquet interdum dolor. Etiam ornare nisi enim, molestie sodales elit porta non. Morbi et.
                     </div>
                     <div class="service__link"><a href="#">Read More</a></div>
                 </div>
@@ -122,7 +122,7 @@
                     <div class="service__icon service__app"></div>
                     <h3 class="title-h3">App Developing</h3>
                     <div class="service__text">
-                        When your customers can buy what you sell from others, that’s called competition. That also makes it a commodity.
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam aliquet interdum dolor. Etiam ornare nisi enim, molestie sodales elit porta non. Morbi et.
                     </div>
                     <div class="service__link"><a href="#">Read More</a></div>
                 </div>
@@ -132,7 +132,7 @@
     <section class="section-portfolio">
         <div class="wrapper">
             <h2 class="title-h2 text-center">My Portfolio</h2>
-            <p class="after-title text-center">Here is all my work that i maked for some great people</p>
+            <p class="after-title text-center">Here is all my work that I did for some great people</p>
 
             <div class="portfolio">
                 <div class="portfolio-item portfolio-photo1">
@@ -184,7 +184,7 @@
     <section class="section-feedback">
         <div class="wrapper">
             <h2 class="title-h2 text-center">Testimonials</h2>
-            <p class="after-title text-center">Lets check what people say about me and my work</p>
+            <p class="after-title text-center">Lets find out what people say about me and my work</p>
             <div class="feedback">
                 <div class="feedback-item">
                     <div class="feedback-top">
@@ -197,7 +197,8 @@
                         </div>
                     </div>
                     <div class="feedback-body">
-                        <p>Finding the right partner to help make this goal a reality was key. The smart and creative team at Blue Fountain Media has helped anthony.com establish itself as a successful online business and become synonymous with an enjoyable solutions.</p>
+                        <p>
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque sit amet odio massa. Nullam vitae dolor molestie, facilisis erat id, auctor nibh. Integer accumsan molestie fringilla. Suspendisse eget nisi vel risus varius cursus. Ut malesuada, neque sed sagittis.</p>
                     </div>
                 </div>
                 <div class="feedback-item">
@@ -211,7 +212,8 @@
                         </div>
                     </div>
                     <div class="feedback-body">
-                        <p>Blue Fountain Media came up with the design on their first try, delivered the complete package on a reasonable budget, and continued to fine-tune it. That wasn't enough -- they also created a plan to market the website and increase traffic.</p>
+                        <p>
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque sit amet odio massa. Nullam vitae dolor molestie, facilisis erat id, auctor nibh. Integer accumsan molestie fringilla. Suspendisse eget nisi vel risus varius cursus. Ut malesuada, neque sed sagittis.</p>
                     </div>
                 </div>
             </div>
@@ -231,21 +233,21 @@
                     <div class="advantages__icon advantages__icon-2"></div>
                     <p class="advantages__title">
                         <span>1214</span>
-                        Completed Project
+                        Completed Projects
                     </p>
                 </div>
                 <div class="advantages-item">
                     <div class="advantages__icon advantages__icon-3"></div>
                     <p class="advantages__title">
                         <span>10</span>
-                        Years Experience
+                        Years Of Experience
                     </p>
                 </div>
                 <div class="advantages-item">
                     <div class="advantages__icon advantages__icon-4"></div>
                     <p class="advantages__title">
                         <span>375</span>
-                        Wins Awards
+                        Won Awards
                     </p>
                 </div>
             </div>
