feat: @media(max-width: 425px)

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
-<section class="main">
+<div class="main">
     <header>
         <div class="header">
             <div class="logo">
@@ -44,7 +44,7 @@
         </div>
     </div>
     <button class="btn-scroll"><img src="images/scroll.png" alt="Scroll"></button>
-</section>
+</div>
 <section class="section-about-me">
     <div class="wrapper">
         <div class="box-about">
@@ -86,7 +86,7 @@
         <div class="service">
             <div class="service-item">
                 <div class="service__icon service__design"></div>
-                <h3 class="title-h3">Graphic Design</h3>
+                <h3 class="title-h3">Marketing</h3>
                 <div class="service__text">
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam aliquet interdum dolor. Etiam
                     ornare nisi enim, molestie sodales elit porta non. Morbi et.
@@ -122,7 +122,7 @@
             </div>
             <div class="service-item">
                 <div class="service__icon service__marketing"></div>
-                <h3 class="title-h3">Marketing</h3>
+                <h3 class="title-h3">Graphic Design</h3>
                 <div class="service__text">
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam aliquet interdum dolor. Etiam
                     ornare nisi enim, molestie sodales elit porta non. Morbi et.
